// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DiscountBadge /> should render the text 1`] = `
<div
  className="ui-shared__discount-badge"
  data-test-id="foo"
>
  <Translate
    acceptPlainTextWithPlaceholders={false}
    className="css-tyfhga "
    params={
      Array [
        null,
      ]
    }
    role={null}
    string="foo"
  />
</div>
`;

exports[`<DiscountBadge /> should render the text and discount 1`] = `
<div
  className="ui-shared__discount-badge"
  data-test-id="SAVE {0}%"
>
  <Translate
    acceptPlainTextWithPlaceholders={false}
    className="css-tyfhga "
    params={
      Array [
        20,
      ]
    }
    role={null}
    string="SAVE {0}%"
  />
</div>
`;
